--- a/index.html
+++ b/index.html
@@ -11,14 +11,33 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
+        <span>S</span>
+        <span>I</span>
+        <span>L</span>
+        <span>F</span>
+        <span>I</span>
         <span>A</span>
+        <Span>A</Span>
+        <span>M</span>
+        <span>E</span>
         <span>L</span>
+        <span>I</span>
+        <span>A</span>
+        <span>W</span>
+        <span>U</span>
         <span>L</span>
-        <span>O</span>
+        <span>A</span>
+        <span>N</span>
+        <span>D</span>
+        <span>A</span>
+        <span>R</span>
+        <span>I</span>
+        
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Happy graduation .. Selamat yaa Semoga ilmu yang kamu dapatkan selama ini bermanfaat untukmu dan sekitarmu.. Semoga mimpimu tergapai semuaa.. I wish you the best See you on the top..  Congratulations !!!
+
+I have a special gift for you!!</span>
     </div>
     <div class="button">
         <button>
